tests/snapshots/run_wpt_conformance__litert_pow__square__float16_4D_base_tensor_and_broadcastable_0D_integer_exponent_scalar.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
pow.https.any.js pow (square) float16 4D base tensor and broadcastable 0D integer exponent scalar, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputB: f16[];
  }

  consts {
    operand_0: f16[2, 2, 2, 3] @bytes([118, 76, 10, 172, 239, 200, 151, 73, 86, 204, 238, 73, 53, 204, 81, 65, 145, 193, 225, 202, 145, 74, 1, 183, 215, 203, 36, 73, 114, 75, 241, 196, 30, 203, 135, 66, 79, 76, 198, 193, 195, 189, 194, 197, 90, 76, 91, 76]);
  }

  nodes {
    [output] = pow(operand_0, inputB, label="");
  }

  outputs { output; }
}
